...
                    InconspicuousButton(
                      onPressed: () async {
                        store.unsetTodayPillNumber();
                        analytics.logEvent(name: "unknown_number_initial_setting");
                        Navigator.of(context).push(InitialSettingReminderTimesPageRoute.route());
                      },
                      text: "まだ分からない",
                    ),
                  ],
                ),
              ),
              Column(
                mainAxisAlignment: MainAxisAlignment.end,
                children: [
                  const SizedBox(height: 30),
                  SizedBox(
                    width: 180,
                    child: PrimaryButton(
                      text: "次へ",
                      onPressed: state.todayPillNumber == null
                          ? null
                          : () async {
                              analytics.logEvent(name: "done_today_number_initial_setting");
                              Navigator.of(context).push(InitialSettingReminderTimesPageRoute.route());
                            },
...
