...
            const Spacer(),
            Padding(
              padding: const EdgeInsets.symmetric(
                horizontal: 39,
              ),
              child: AppOutlinedButton(
                text: "アプリをはじめる",
                onPressed: () async {
                  analytics.logEvent(name: "pressed_start_app_preiun_trial");
                  try {
                    await store.register();
                    AppRouter.endInitialSetting(context);
                  } catch (error) {
...
